# data_acquisition_HMI

./: CMakeLists.txt  Main.qml  QmlMap.qml  README.md  main.cpp  qml.qrc
